--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +47,19 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 15px;
+}
+
+.left-side {
+  display: flex;
+  align-items: center;
+  margin: 0 15px;
+}
+
+.right-side {
+  display: flex;
+  align-items: center;
+  margin: 0 15px;
+  gap: 15px;
 }
