--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
+  margin: 15px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.plant-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
